--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.20",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   }
 }
